--- a/_posts/2018-09-28-themes.md
+++ b/_posts/2018-09-28-themes.md
@@ -1,9 +1,9 @@
 ---
-date: 2017-01-16
-title: Cause
+date: 2018-09-28
+title: Theme Page
 categories:
   - themes
-description: "A not-for-profit theme for Jekyll"
+description: Page description
 type: Document
 ---
 Jekyll is a simple, blog-aware, static site generator. It takes a template directory containing raw text files in various formats, runs it through a converter (like Markdown) and our Liquid renderer, and spits out a complete, ready-to-publish static website suitable for serving with your favorite web server.
