--- a/_posts/2018-09-28-plugins.md
+++ b/_posts/2018-09-28-plugins.md
@@ -1,9 +1,9 @@
 ---
-date: 2017-01-16
-title: Cloudflare
+date: 2018-09-28
+title: Plugin Page
 categories:
-  - deployment
-description: Deploy your Jekyll site on Cloudflare
+  - plugins
+description: Page Description
 type: Document
 ---
 Jekyll is a simple, blog-aware, static site generator. It takes a template directory containing raw text files in various formats, runs it through a converter (like Markdown) and our Liquid renderer, and spits out a complete, ready-to-publish static website suitable for serving with your favorite web server.
